--- a/New folder/index.html
+++ b/New folder/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body bgcolor="pink">
+<body>
     <center>
         <h1>Potfolio 🚀</h1>
         <p>let yourself to know about me here!</p>
